# music-recommendations-ml-model

./: .gitignore  main.py  pyproject.toml
saved_models/random_forest_1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
saved_models/random_forest_1/assets/: 0cc49743274c46fadata_spec.pb  0cc49743274c46farandom_forest_header.pb  5206ca04105c46c1random_forest_header.pb
saved_models/random_forest_1/variables/: variables.data-00000-of-00001  variables.index
